--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,9 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_marginEnd="16dp"
-                android:text="@string/clear_filters"
-                app:icon="@drawable/baseline_clear_24" />
+                android:layout_marginEnd="0dp"
+                android:text="@string/clear_filters" />
 
         </com.google.android.material.appbar.MaterialToolbar>
 
