--- a/app/src/main/res/layout/item_wallpaper.xml
+++ b/app/src/main/res/layout/item_wallpaper.xml
@@ -8,12 +8,30 @@
     app:cardCornerRadius="12dp"
     app:cardElevation="2dp">
 
-    <ImageView
-        android:id="@+id/wallpaper_image"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        tools:src="@android:drawable/ic_menu_gallery" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/wallpaper_image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            tools:src="@android:drawable/ic_menu_gallery" />
+
+        <ImageButton
+            android:id="@+id/favorite_button"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="8dp"
+            android:background="@drawable/favorite_button_background"
+            android:src="@drawable/ic_favorite_border"
+            android:contentDescription="Add to favorites"
+            android:scaleType="centerInside"
+            android:padding="8dp" />
+
+    </FrameLayout>
 
 </androidx.cardview.widget.CardView>
