feat(wallpaper): add bottom button group for wallpaper actions and update favorite functionality

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Bottom App Bar -->
+    <color name="bottom_app_bar_background">#CC000000</color> <!-- Semi-transparent black -->
 </resources>
